# vkr

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bootstrap.sh  rebuild.sh
apps/: CMakeLists.txt
apps/_test/: main.cpp
apps/canvas/: main.cpp
apps/cornellbox/: main.cpp
apps/fortest/: main.cc  main.cpp
apps/shadertoy/: main.cpp
apps/skybox/: main.cpp
apps/teapot/: main.cpp
apps/teapot/assets/shaders/postprocess/: postprocess.frag
apps/teapot/assets/shaders/teapot/: teapot.frag  teapot.vert
assets/shaders/shadertoy/: shadertoy.frag
assets/shaders/skybox/: skybox.frag  skybox.vert
assets/shaders/texture2d/: texture2d.vert
cmake/: CompilerSetup.cmake  Dependencies.cmake  Helpers.cmake  LibraryTargets.cmake  SourceCollections.cmake  Stastics.cmake  VkApp.cmake  config.cmake
demos/: CMakeLists.txt
demos/basic/appTest/: main.cc
demos/basic/cornellbox/: main.cc
demos/basic/fortest/: main.cc
demos/basic/triangle/: hello_triangle.cc  main.cc
demos/basic/uniform/: main.cc
demos/basic/vertex/: main.cc
doc/: README.md
examples/: CMakeLists.txt
examples/shadertoy/: CMakeLists.txt  main.cpp
examples/skybox/: CMakeLists.txt  main.cpp
examples/teapot/: CMakeLists.txt  main.cpp
examples/vector_add/: CMakeLists.txt  main.cpp
examples/vector_ops/: CMakeLists.txt  main.cpp
include/: app.hpp  camera.hpp  ctx.hpp  vkr.hh  vkr.hpp  window.hpp
include/impl/: index.hpp  uniform.hpp  universal_buffer.hpp  vertex.hpp
include/interface/: command_buffers.hpp  command_pool.hpp  debug_messenger.hpp  descriptor.hpp  descriptor_layout.hpp  descriptor_set.hpp  device.hpp  extensions.hpp  frame_buffer.hpp  frame_buffers.hpp  image.hpp  instance.hpp  pipeline.hpp  render_pass.hpp  shader_module.hpp  surface.hpp  swapchain.hpp  sync_objects.hpp  validation_layers.hpp  vk_utils.hpp  window.hpp
include/vkr/: app.hh  app.hpp  camera.hpp  context.hh  ctx.hh  ctx.hpp  fps_counter.hpp  io_utils.hh  logger.hh  pch.hh  pch.hpp  resource_manager.hpp  scene.hpp  timer.hh  utils.hpp
include/vkr/archive/: toml.hh
include/vkr/buffers/: buffer.hh  buffers.hh  command.hh  command.hpp  frame.hh  frame.hpp  index.hh  index.hpp  uniform.hh  uniform.hpp  universal.hpp  vertex.hh  vertex.hpp
include/vkr/components/: camera.hh  camera.hpp  components.hh  fps_counter.hh  fps_counter.hpp  timer.hh
include/vkr/core/: command_buffer.hh  command_pool.hh  core.hh  core_utils.hh  debug_messenger.hh  depth_resources.hh  device.hh  fence.hh  instance.hh  queue_families.hh  semaphore.hh  semaphores.hh  surface.hh  swapchain.hh  sync_objects.hh  window.hh
include/vkr/geometry/: geometry.hh  geometry.hpp  mesh.hh  mesh.hpp
include/vkr/interface/: command_pool.hpp  debug_messenger.hpp  depth_resources.hh  descriptor_layout.hh  descriptor_layout.hpp  descriptor_set.hh  descriptor_set.hpp  device.hpp  instance.hpp  interface.hh  pipeline.hh  pipeline.hpp  render_pass.hpp  shader_module.hh  shader_module.hpp  surface.hh  surface.hpp  swapchain.hpp  sync_objects.hpp  vk_utils.hh  vk_utils.hpp  window.hh  window.hpp
include/vkr/pipeline/: compute_pipeline.hh  graphics_pipeline.hh  pipeline.hh  render_pass.hh  shader_module.hh
include/vkr/render/: graph.hh  pass.hh  pipeline_library.hh  renderer.hh
include/vkr/rendering/: offscreen.hh  renderer.hh  rendering.hh
include/vkr/resource/: depth_resources.hh  manager.hh  mesh.hh  offscreen_target.hh  shader_module.hh
include/vkr/resources/: depth_resources.hh  manager.hh  mesh.hh  offscreen_target.hh  resources.hh
include/vkr/scene/: camera.hh  frame_uniform_buffer_set.hh  scene.hh
include/vkr/ui/: fps.hpp  fps_panel.hh  theme.hh  ui.hh  ui.hpp
include/vkr/util/: asset.hh  compiler.hh  io.hh  (+3 more)
lib/: app.cc  logger.cc  timer.cc
lib/buffers/: index.cc  uniform.cc  universal.cc
lib/components/: camera.cc  fps_counter.cc  timer.cc
lib/core/: command_buffer.cc  commmand_pool.cc  core_utils.cc  debug_messenger.cc  device.cc  instance.cc  queue_families.cc  surface.cc  swapchain.cc  sync_objects.cc  vk_utils.cc  window.cc
lib/geometry/: mesh.cc
lib/glfw-3.4/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/interface/: debug_messenger.cc  device.cc  render_pass.cc  swapchain.cc  sync_objects.cc
lib/pipeline/: compute_pipeline.cc  graphics_pipeline.cc  render_pass.cc  shader_module.cc
lib/render/: graph.cc  pipeline_library.cc  renderer.cc
lib/rendering/: offscreen.cc  renderer.cc
lib/resource/: depth_resources.cc  mesh.cc  offscreen_target.cc  shader_module.cc
lib/resources/: depth_resources.cc  mesh.cc  offscreen_target.cc
lib/scene/: camera.cc
lib/ui/: fps_panel.cc  theme.cc  ui.cc
lib/util/: asset.cc  compiler.cc  input_tracer.cc  timer.cc
scripts/: bootstrap.sh
shaders/canvas/: canvas.vert
shaders/default3d/: default3d.vert
shaders/shadertoy-example/: fullscreen.vert  shader.frag  shader.vert
shaders/texture/: texture.frag
shaders/texture3d/: texture3d.vert
shaders/toy/: shader.frag  shader.vert
src/: CMakeLists.txt  app.cc  camera.cc  ctx.cc  fps_counter.cc  profiler.cc  scene.cc  vkr.cc  window.cc
src/buffers/: command.cc  frame.cc  index.cc  uniform.cc  universal_buffer.cc  vertex.cc
src/components/: camera.cc  fps_counter.cc
src/components/ui/: fps.cc  ui.cc
src/geometry/: mesh.cc
src/impl/: index.cc  uniform.cc  universal_buffer.cc  vertex.cc
src/interface/: command_buffers.cc  commmand_pool.cc  debug_messenger.cc  descriptor.cc  descriptor_layout.cc  descriptor_set.cc  device.cc  extensions.cc  frame_buffer.cc  frame_buffers.cc  image.cc  instance.cc  pipeline.cc  render_pass.cc  shader_module.cc  surface.cc  swapchain.cc  sync_objects.cc  validation_layers.cc  vk_utils.cc  window.cc
src/ui/: fps.cc  ui.cc
tests/: CMakeLists.txt  check_physical_devices.cpp  list_extensions.cc  list_validation_layers.cc
tools/: CMakeLists.txt  check_physical_devices.cpp  list_extensions.cpp  list_validation_layers.cpp
tools/_test/: main.cpp
tools/canvas/: main.cpp
tools/cornellbox/: main.cpp
tools/shadertoy/: main.cpp
(+293 files in other folders)
